removed entities